# store2hydro-markets

./: README.md  pyproject.toml
src/store2hydro_markets/: io.py  main.py
src/store2hydro_markets/analysis/: case_a.py
src/store2hydro_markets/cases/: case_a.py
