
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "store2hydro-markets"
version = "0.1.0"
description = "Market valuation layer for store2hydro"
authors = [{ name = "Alexander Kies" }]
requires-python = ">=3.10"
dependencies = [
    "pypsa",
    "pandas",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
